<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">HalalTokens</string>
    <string name="B004CSI" translatable="false" tools:ignore="ExtraTranslation">https://sisweb.ucd.ie/usis/W_HU_REPORTING.P_LAUNCH_REPORT?p_report=RB150&amp;p_parameters=F3A3382D88851EADE7E4D8D868DFE4E710877B4CCEA890CBD9F40F38603DBE93E48B99ED3AA875AE2996FBD87540DA66550F4C9F828EA3465AA4A7760421ACC73558A6E8D7ECF40D5BDB6AA23A3359D815161F2C55E695A4D7C18B3816147C92287E2352AF803917BA0841D5F98B0F03B64EF15704F6FC1D50A768970CFE0FCB389D7E9E66B0AA95122126A1C29C2FAFEF92EE707B01A512C9276ACBA8C4088E6E6C1E3E876AD9BFD6A9A3F9FC1A4FA745694410BFA6AA2A35D4A70E776949554DC57B4AEBB40F557E3A24C8A6BB0FB5606906A9B3A49567267A06D211409D7E353B43C20EEB06D5EB847227EA220B5928C93DF3AF135E038E1D237A9BEC49E65D6D1ABE24786353E7B4AE5651DBC280FBAE6514BCA1F7D7086A063ECC0FF449DC4B9DD9CFEFCE06D9728C701F867BD41401BA37B0E16E5882A127D8B94EF36426F48C32F9366A00FF1B98098C980D99FF219B38CF9D8714F79400A8A2B9CDFC</string>
    <string name="AG1.01" translatable="false" tools:ignore="ExtraTranslation">https://sisweb.ucd.ie/usis/W_HU_REPORTING.P_LAUNCH_REPORT?p_report=RB150&amp;p_parameters=F3A3382D88851EADE7E4D8D868DFE4E732262E47529C639C36061476B7E1018A3C91F6790E4BA913B6CB0C5D7C4F5E792BC5C9361FE1840615BD2F1C0807A4D1C318F80E495ADC17185C3FAF2B5CCF79C22FC581969282848485BA40D1DBADE7D5CDEE12E8FB9EAFF1B4F5C1C92C25EE34E74F758D63C9C16F8E07F63F82569C918A0DA5A8049F4E3758988C261AF99963B7AD17F3C004C80B42F49C876B1398CF7DAE729D02139FE1F3AAC4A067E1AED447B60438C3AD6C4FAD9E2882BAD2090DB9CCE4D0643B770A0A1186FAFDC6050C8A3D74AFA1AA03354B2958A0AF843BCFF9E783C01A8657204B9064B535995365A13871963D4D2FEDD972370C95EE80812CE57C9CEB4FEDB0451CA293ACD1921ABB49A22F73C408CC4370FCF95165DD5E9377BCF3B4C64BBB8195E014578BE886A30B8B10B9142F39D315365EC7BDAE50CF9BDA20F6D6B7E0945DEBB168334F</string>
    <string name="AG1.16" translatable="false" tools:ignore="ExtraTranslation">https://sisweb.ucd.ie/usis/W_HU_REPORTING.P_LAUNCH_REPORT?p_report=RB150&amp;p_parameters=F3A3382D88851EADE7E4D8D868DFE4E732262E47529C639C36061476B7E1018A3C91F6790E4BA913B6CB0C5D7C4F5E792BC5C9361FE1840615BD2F1C0807A4D1C318F80E495ADC17185C3FAF2B5CCF79C22FC581969282848485BA40D1DBADE7D5CDEE12E8FB9EAFF1B4F5C1C92C25EE34E74F758D63C9C16F8E07F63F82569C935177CE942193D06389A6DA5F004E7A367CD14E4134E0030056AABA6FA5D70F0FD8191FA57C3F615881326ED7EA7C2B4DE3817C7BCAD8F80D1527158DA5F97BD6C364002A05231F6617640073535EEDDE38E48B26FF1758313097D8388428BE5F5281A578D9EBC2CC4C9B3C828F384FF09363D929096AAC459792EDC744B325419F9DDD174F9B40861067CF6DDE0D91034BE5103592CCF0951FED3507D116365DF1E93EE0A606A6E65B25D9593A934A06F12BCDCF22C3241828A89AAFE22E24D1D40DB5D75F4F85BCB5C79BF4F85CFB</string>
    <string name="AG1.18" translatable="false" tools:ignore="ExtraTranslation">https://sisweb.ucd.ie/usis/W_HU_REPORTING.P_LAUNCH_REPORT?p_report=RB150&amp;p_parameters=F3A3382D88851EADE7E4D8D868DFE4E732262E47529C639C36061476B7E1018A3C91F6790E4BA913B6CB0C5D7C4F5E792BC5C9361FE1840615BD2F1C0807A4D1C318F80E495ADC17185C3FAF2B5CCF79C22FC581969282848485BA40D1DBADE7D5CDEE12E8FB9EAFF1B4F5C1C92C25EE34E74F758D63C9C16F8E07F63F82569C935177CE942193D06389A6DA5F004E7A367CD14E4134E0030056AABA6FA5D70F0FD8191FA57C3F615881326ED7EA7C2BB5D3EF02D9C7C4103C280DF93DA1FCE228D848C969F8EA0DDD426C6B73B86F8C896FA59C1A88F9AF8BA28E5248007A6AEC9C18F056BC12B6A3BE51E473D5749A0E97A1A39A2ED11A189F9BD258DC558E96DF140DC83594F160FE419D2F99CB1C02469BE4C700B3D3E2B5A68B151FE35619CF1AF1C1F612EFEFC86F2002EC7ED71DF41FA7C418A22FB98CD032ADE11DF45DE3477E42910019EABACFA297F3A0BA</string>
    <string name="AG1.19" translatable="false" tools:ignore="ExtraTranslation">https://sisweb.ucd.ie/usis/W_HU_REPORTING.P_LAUNCH_REPORT?p_report=RB150&amp;p_parameters=F3A3382D88851EADE7E4D8D868DFE4E732262E47529C639C36061476B7E1018A3C91F6790E4BA913B6CB0C5D7C4F5E792BC5C9361FE1840615BD2F1C0807A4D1C318F80E495ADC17185C3FAF2B5CCF79C22FC581969282848485BA40D1DBADE7D5CDEE12E8FB9EAFF1B4F5C1C92C25EE34E74F758D63C9C16F8E07F63F82569C935177CE942193D06389A6DA5F004E7A367CD14E4134E0030056AABA6FA5D70F0FD8191FA57C3F615881326ED7EA7C2BAC300EF32F6BE13BFBDFF1F8F365D60D97B63C055C28B17F1A4B86F650F02EEF167E1E754CB71982B91854B90747F67910116E41A8F648EB3234B84F01FFB9ECF4351238ABEB50F30583855495A83F4DE63A3662BADC6F3A3C948BEBE60D73FD1E599E582D03FF357227C93A7818F3872D6DCB64BEC3FE8B6098556A350B156FF31D5E5AD8EB80144FBFAFD1B5BAA6706AB7C3D6D7D4A6DB57AFC980D3957A25</string>
    <string name="AG1.47" translatable="false" tools:ignore="ExtraTranslation">https://sisweb.ucd.ie/usis/W_HU_REPORTING.P_LAUNCH_REPORT?p_report=RB150&amp;p_parameters=F3A3382D88851EADE7E4D8D868DFE4E732262E47529C639C36061476B7E1018A3C91F6790E4BA913B6CB0C5D7C4F5E792BC5C9361FE1840615BD2F1C0807A4D1C318F80E495ADC17185C3FAF2B5CCF79C22FC581969282848485BA40D1DBADE7D5CDEE12E8FB9EAFF1B4F5C1C92C25EE34E74F758D63C9C16F8E07F63F82569C935177CE942193D06389A6DA5F004E7A367CD14E4134E0030056AABA6FA5D70F0FD8191FA57C3F615881326ED7EA7C2B188E9D83480D336EA9D254BDBE45079F956E5D7782E3C857CCE78B88F36110389A2FFD10BF0B3015B498EF2CE1268DD674240C80E176AD9C0CECEC38224D118C598067406792BB3EADCA8005190A1BFBA2A63688D8737509FDF6F4273A7A36083E9FCB8D49BA53D63A8427D1A09D140A62B39CC65B9BE2E02F7C3FE159E527E0DE74B6E12B39FBBD18B058AFF19A23AB26159CC0E63EB656814AD6685E61C2ED</string>
    <string name="AG3.26" translatable="false" tools:ignore="ExtraTranslation">https://sisweb.ucd.ie/usis/W_HU_REPORTING.P_LAUNCH_REPORT?p_report=RB150&amp;p_parameters=F3A3382D88851EADE7E4D8D868DFE4E732262E47529C639C36061476B7E1018A3C91F6790E4BA913B6CB0C5D7C4F5E792BC5C9361FE1840615BD2F1C0807A4D1C318F80E495ADC17185C3FAF2B5CCF79C22FC581969282848485BA40D1DBADE7D5CDEE12E8FB9EAFF1B4F5C1C92C25EE34E74F758D63C9C16F8E07F63F82569C935177CE942193D06389A6DA5F004E7A367CD14E4134E0030056AABA6FA5D70F0FD8191FA57C3F615881326ED7EA7C2B6A51017B630235C59386FFD342955E709F5829AEDB039CD61215E03BE21A8D81BB3098DF6EA3314CD23C48B693296EDE0F875CB271E8E5E305FC6E4D35EBC8153850ADE641BE10A4490FEF4BD5F01DCE8263078BFF55EDCDC5F68933F9A6FBF2381B29314C365E609C5EE0A671F178E597B5AB430080511F447F6507F9BDFC4EDB46A70FE230603CBF4E5B4E7D7CA8B10E08CBBB960ED2D53A29EC2D10FC4DF7</string>
    <string name="AG_FS_G01" translatable="false" tools:ignore="ExtraTranslation">https://sisweb.ucd.ie/usis/W_HU_REPORTING.P_LAUNCH_REPORT?p_report=RB150&amp;p_parameters=F3A3382D88851EADE7E4D8D868DFE4E732262E47529C639C36061476B7E1018A3C91F6790E4BA913B6CB0C5D7C4F5E792BC5C9361FE1840615BD2F1C0807A4D1C318F80E495ADC17185C3FAF2B5CCF79C22FC581969282848485BA40D1DBADE7D5CDEE12E8FB9EAFF1B4F5C1C92C25EE34E74F758D63C9C16F8E07F63F82569C935177CE942193D06389A6DA5F004E7A367CD14E4134E0030056AABA6FA5D70F0FD8191FA57C3F615881326ED7EA7C2B6CE8751BF19E73887EF0A6879E3AA82908065F5174321E2823834EAA64AB1D3503B1670AD09CAD0D81EDDD7A090858FC6E8D061CD089F87D9017C021B75F0D108FD743349FD15CACF9E4BAF64E02667D1B75DD4489CAB77A791B7065BC0776F2510ED3F30431F30F53245F7205B89E18B85D1930B93B5A256939FF583576DA3CEA6F30DD3D881FC0EB103658FE3FE67A7989D387C0BCA04F429E39B998C323FC</string>
    <string name="AG_G_06" translatable="false" tools:ignore="ExtraTranslation">https://sisweb.ucd.ie/usis/W_HU_REPORTING.P_LAUNCH_REPORT?p_report=RB150&amp;p_parameters=F3A3382D88851EADE7E4D8D868DFE4E732262E47529C639C36061476B7E1018A3C91F6790E4BA913B6CB0C5D7C4F5E792BC5C9361FE1840615BD2F1C0807A4D1C318F80E495ADC17185C3FAF2B5CCF79C22FC581969282848485BA40D1DBADE7D5CDEE12E8FB9EAFF1B4F5C1C92C25EE34E74F758D63C9C16F8E07F63F82569C935177CE942193D06389A6DA5F004E7A367CD14E4134E0030056AABA6FA5D70F0FD8191FA57C3F615881326ED7EA7C2BAB3117DECE5582725C2C69B718AA2AFA8E26EAA476F62BB63DEF8A52E569846B517CC8AB32C638D36FF5F44F7E5E9B9D5798AD4E558180361B09454545B5A7C69BA470784A7A70D709D0DC219F92223D2911C52633B90EFB2DC0757DA28F3D6A2ADBA42E86B3514B126E33B2369698AAEA28A1BF59ED024F774CFA3B22007A75A0D98C2731B50B01BD8A97C30E7A09B6981A05220168651F29F876BD6F8417A1</string>
    <string name="AG_G_07" translatable="false" tools:ignore="ExtraTranslation">https://sisweb.ucd.ie/usis/W_HU_REPORTING.P_LAUNCH_REPORT?p_report=RB150&amp;p_parameters=F3A3382D88851EADE7E4D8D868DFE4E732262E47529C639C36061476B7E1018A3C91F6790E4BA913B6CB0C5D7C4F5E792BC5C9361FE1840615BD2F1C0807A4D1C318F80E495ADC17185C3FAF2B5CCF79C22FC581969282848485BA40D1DBADE7D5CDEE12E8FB9EAFF1B4F5C1C92C25EE34E74F758D63C9C16F8E07F63F82569C935177CE942193D06389A6DA5F004E7A367CD14E4134E0030056AABA6FA5D70F0FD8191FA57C3F615881326ED7EA7C2BD2395DD0E21FC40BAE1366D0419D48E66E37A40B886F9A7893399C205E361DD208C5F8AAA98935871272B43270371C3C8757F999319B0B756EE005DA9BE7D91BF87F549E39DF71E873E4D6F0D7C4A0F4F2C6E465B56C0CB460FE1D3F02E86186331668327D1BD8F5237E77C54A490CFD22D19D584C8343AC6731B6A81429FEBB3C01E6D138F34A77B54AC1C5CD7B8501890E9F6F5CEFC5A4720849F407F10CFD</string>
    <string name="AG_G_08" translatable="false" tools:ignore="ExtraTranslation">https://sisweb.ucd.ie/usis/W_HU_REPORTING.P_LAUNCH_REPORT?p_report=RB150&amp;p_parameters=F3A3382D88851EADE7E4D8D868DFE4E732262E47529C639C36061476B7E1018A3C91F6790E4BA913B6CB0C5D7C4F5E792BC5C9361FE1840615BD2F1C0807A4D1C318F80E495ADC17185C3FAF2B5CCF79C22FC581969282848485BA40D1DBADE7D5CDEE12E8FB9EAFF1B4F5C1C92C25EE34E74F758D63C9C16F8E07F63F82569C935177CE942193D06389A6DA5F004E7A367CD14E4134E0030056AABA6FA5D70F0FD8191FA57C3F615881326ED7EA7C2B52B07118F4A348C7BAF4197BB89DF458431F6661D029A84B08C6E5A649980C81EDBFBF8B534108B6ABD633E70CBC9191252A11F60D8F0210787087341BA43D5AAFCF643438A7B81DE7FC19EF0E0BE4D9890214828032EB2C5693814B7B7F22A31910CEDBE1FACC3B3ACA565AE965BFCF23F96606B068F4EEDEFBE371C6A38DE62BA49BE98866EAF1AAC29B1ED386143C865B51CEBE1D18AA3240101C5468A4C3</string>
    <string name="AG_G_09" translatable="false" tools:ignore="ExtraTranslation">https://sisweb.ucd.ie/usis/W_HU_REPORTING.P_LAUNCH_REPORT?p_report=RB150&amp;p_parameters=F3A3382D88851EADE7E4D8D868DFE4E732262E47529C639C36061476B7E1018A3C91F6790E4BA913B6CB0C5D7C4F5E792BC5C9361FE1840615BD2F1C0807A4D1C318F80E495ADC17185C3FAF2B5CCF79C22FC581969282848485BA40D1DBADE7D5CDEE12E8FB9EAFF1B4F5C1C92C25EE34E74F758D63C9C16F8E07F63F82569C935177CE942193D06389A6DA5F004E7A367CD14E4134E0030056AABA6FA5D70F0FD8191FA57C3F615881326ED7EA7C2BCF1074F84F5BC1E9BBC43CC34EC49D899C6B35D00CE6EFD0640F6B859AC7151E3573FDFEE51CEABC25C12A6F654798CF3D745129AC25F78F8389B92664C888AFA139A221A5B1820487C32B7CEE31C15F96889E0275B4667D039876A2D09D110FDCF2D9D1360BCA4EAAC4173373FEC79D539B56E91007A390743B4F63C69092B955806F7E642B734958C1DA108E32F0F180D22E871C9C2F1E5A21CD7591DB4AE1</string>
    <string name="AG_G_15" translatable="false" tools:ignore="ExtraTranslation">https://sisweb.ucd.ie/usis/W_HU_REPORTING.P_LAUNCH_REPORT?p_report=RB150&amp;p_parameters=F3A3382D88851EADE7E4D8D868DFE4E732262E47529C639C36061476B7E1018A3C91F6790E4BA913B6CB0C5D7C4F5E792BC5C9361FE1840615BD2F1C0807A4D1C318F80E495ADC17185C3FAF2B5CCF79C22FC581969282848485BA40D1DBADE7D5CDEE12E8FB9EAFF1B4F5C1C92C25EE34E74F758D63C9C16F8E07F63F82569C935177CE942193D06389A6DA5F004E7A367CD14E4134E0030056AABA6FA5D70F0FD8191FA57C3F615881326ED7EA7C2B2A44DA419E3A19CE7DA2AEFC75BB2C94AD0A83385854F90E3C0C720E82BB16736BC56A91F4193778A8CC41107D1BF9852E26311360692A17B0AD312143A00D69777F2A055F5C310746B69095F9ED352875B014C1BF15E208D8A1A133B5E5ADD2C2201F7898F5B439121D678C0A2AFF851FD0013BCABCA39E4E86BE9278249542EF618BFFFCDF9A50110E5F6711AA76C290AF74EAD6C90F0E9E575284A25D4A1F</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="urooms">uRooms</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="log_in">Log in</string>
    <string name="not_a_user_click_here_to_sign_up">Not a User? Click here to Sign Up</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_a_user_click_here_to_log_in">Already a User? Click here to Log In</string>
    <string name="send_email">Send Email</string>
    <string name="forgot_password">Forgot Password?</string>
</resources>