<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/grad_login_bg"
    tools:context=".ForgotPassword"
    android:onClick="hideKeyboard">


    <TextView
        android:id="@+id/urooms_login_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/billabong"
        android:text="@string/urooms"
        android:textColor="@color/white"
        android:textSize="75sp" />

    <EditText
        android:id="@+id/edit_text_email"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="122dp"
        android:autofillHints="@string/prompt_email"
        android:background="#55000000"
        android:fontFamily="@font/roboto_regular"
        android:hint="@string/email_address"
        android:imeOptions="actionSend"
        android:inputType="textEmailAddress"
        android:padding="15dp"
        android:textColor="@color/white"
        android:textColorHint="#ffffff"
        android:textSize="14sp" />

    <Button
        android:id="@+id/forgot_password_button"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="62dp"
        android:background="@drawable/grad_bg"
        android:fontFamily="@font/roboto_bold"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:text="@string/send_email"
        android:textColor="#000000"/>

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/sign_up_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="80dp"
        android:layout_marginTop="270dp"
        app:lottie_autoPlay="false"
        app:lottie_fileName="loading.json"
        app:lottie_loop="true"
        />

</RelativeLayout>